--- a/gradle.properties
+++ b/gradle.properties
@@ -12,16 +12,16 @@ minecraft_version_upper = 99
 minecraft_version_name = 1.21.(6+)
 
 # Mod Properties
-mod_id = sneaker
-mod_name = Sneak Indicator
-mod_description = Displays player hotbars above their nametags
+mod_id = ssi
+mod_name = Sneak/Sprint Indicator
+mod_description = Displays an icon when you're sneaking, sprinting, or both!
 mod_version = 0.1.0
 maven_group = eva
 mod_license = MIT
 
 
 # File Name
-archives_base_name = sneaker
+archives_base_name = spreak
 
 
 # Dependencies
